# rust-url-shortener

./: Cargo.toml
migrations/2020-09-11-234701_create_links/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
